--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,15 @@ certifi==2020.6.20
 charset-normalizer==2.0.12
 flatbuffers==2.0
 gast==0.5.3
+google-api-core==2.7.2
 google-auth==2.6.5
 google-auth-oauthlib==0.4.6
+google-cloud-core==2.3.0
+google-cloud-storage==2.3.0
+google-crc32c==1.3.0
 google-pasta==0.2.0
+google-resumable-media==2.3.2
+googleapis-common-protos==1.56.0
 grpcio==1.44.0
 h5py==3.6.0
 idna==3.3
